socket-manager/skaffold-kustomize/local/deployment-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket-manager
  template:
    metadata:
      labels:
        app: socket-manager
    spec:
      containers:
        - name: socket-manager
          image: localhost:5000/socket-manager:latest
