socket-manager/skaffold-kustomize/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-manager
spec:
  rules:
    - host: socket-manager.tiga.health
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: socket-manager
                port:
                  number: 80
